examples/app-protect/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: app-protect
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/tea"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=10.1.1.7:515"
spec:
  ingressClassName: nginx-plus
  tls:
  - hosts:
    - cafe.example.local
    secretName: cafe-secret
  rules:
  - host: cafe.example.local
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  namespace: app-protect
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/www"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=10.1.1.7:515"
spec:
  ingressClassName: nginx-plus
  tls:
  - hosts:
    - www.example.com
    secretName: cafe-secret
  rules:
  - host: www.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: www-svc
            port:
              number: 80
